--- a/resources/jobs_classic/flights_notebook_job_classic.yml
+++ b/resources/jobs_classic/flights_notebook_job_classic.yml
@@ -1,14 +1,14 @@
 # The main job for flights_project
 resources:
   jobs:
-    flights_notebook_classic:
+    flights_notebook:
       name: flights_notebook_job_classic_${bundle.target}
 
       tasks:
         - task_key: notebook_task
           job_cluster_key: job_cluster
           notebook_task:
-            notebook_path: ../src/flights_main_notebook.py
+            notebook_path: ../../src/flights_main_notebook.py
             base_parameters:
                 catalog: ${var.catalog}
                 database: ${var.database}
