--- a/.github/workflows/flights_test.yml
+++ b/.github/workflows/flights_test.yml
@@ -15,12 +15,12 @@ on:
       - "**/*.yml"
       - "**/*.py"
 
-  # push:
-  #   branches:
-  #     - fix/yyyymmdd
-  #   paths:
-  #     - "**/*.yml"
-  #     - "**/*.py"
+  push:
+    branches:
+      - feature/azure_target #fix/yyyymmdd
+    paths:
+      - "**/*.yml"
+      - "**/*.py"
 
 jobs:
   deploy:
@@ -38,7 +38,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      #    cache: 'pip' # caching pip dependencies
       - run: python -m pip install --upgrade pip
       - run: pip install -r requirements.txt -r dev-requirements.txt
 
@@ -55,8 +54,9 @@ jobs:
       
       - uses: databricks/setup-cli@main
 
-      - run: databricks bundle deploy --target test
+      - run: databricks bundle deploy --target test_automated
         env:
+          DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN_TST }}
           DATABRICKS_BUNDLE_ENV: tst
 
@@ -82,6 +82,7 @@ jobs:
           set -o pipefail
           databricks bundle run notebook_validation_job -t test --refresh-all 2>&1 | tee output.log
         env:
+          DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN_TST }}
           DATABRICKS_BUNDLE_ENV: tst
 
