--- a/resources/flights_python_script_job_classic.yml
+++ b/resources/flights_python_script_job_classic.yml
@@ -14,8 +14,8 @@ resources:
       job_clusters:
         - job_cluster_key: job_cluster
           new_cluster:
-            spark_version: 15.3.x-scala2.12
-            node_type_id: m6gd.xlarge
+            spark_version: 15.4.x-scala2.12
+            node_type_id: ${var.node_type_id}
             data_security_mode: USER_ISOLATION
             autoscale:
                 min_workers: 1
