--- a/.github/workflows/flights_test.yml
+++ b/.github/workflows/flights_test.yml
@@ -80,7 +80,7 @@ jobs:
         name: Run notebook validation
         run: |
           set -o pipefail
-          databricks bundle run notebook_validation_job -t test --refresh-all 2>&1 | tee output.log
+          databricks bundle run notebook_validation_job -t test_automated --refresh-all 2>&1 | tee output.log
         env:
           DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN_TST }}
@@ -90,7 +90,8 @@ jobs:
       #   name: Run pipeline validation
       #   run: |
       #     set -o pipefail
-      #     databricks bundle run flights_simple_dlt_validation -t test
+      #     databricks bundle run flights_simple_dlt_validation -t test_automated
       #   env:
+      #     DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
       #     DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN_TST }}
       #     DATABRICKS_BUNDLE_ENV: tst
