--- a/databricks.yml
+++ b/databricks.yml
@@ -51,14 +51,12 @@ targets:
       host: https://e2-dogfood.staging.cloud.databricks.com/
 
   test:
-    # For test/staging deployments, we only have a single copy, so we override the
-    # workspace.root_path default of
-    # /Users/${workspace.current_user.userName}/.bundle/${bundle.target}/${bundle.name}
-    # to a path that is not specific to the current user.
+    # For test/staging deployments, we only have a single copy, so we should deploy as 
+    # the same user (Service Principal) ever time.
     mode: production
     workspace:
       host: https://e2-demo-west.cloud.databricks.com/
-      root_path: /Shared/.bundle/${bundle.target}/${bundle.name}
+      root_path: /Users/${workspace.current_user.userName}/.bundle/${bundle.name}/${bundle.target}
     run_as:
       user_name: ${workspace.current_user.userName}
     variables:
@@ -66,11 +64,25 @@ targets:
       flights_test_schema: flights_validation_test
       flights_dlt_schema: flights_test
 
+  test_automated:
+    # For test/staging deployments, we only have a single copy, so we should deploy as 
+    # the same user (Service Principal) ever time.
+    mode: production
+    workspace:
+      root_path: /Users/${workspace.current_user.userName}/.bundle/${bundle.name}/${bundle.target}
+    run_as:
+      user_name: ${workspace.current_user.userName}
+    variables:
+      database: flights_test
+      flights_test_schema: flights_validation_test
+      flights_dlt_schema: flights_test
+      node_type_id: Standard_DS3_v2
+
   staging:
     mode: production
     workspace:
       host: https://e2-dogfood.staging.cloud.databricks.com/
-      root_path: /Shared/.bundle/${bundle.target}/${bundle.name}
+      root_path: /Users/${workspace.current_user.userName}/.bundle/${bundle.name}/${bundle.target}
     run_as:
       user_name: ${workspace.current_user.userName}
     variables:
