--- a/resources/dlt/flights_dlt.yml
+++ b/resources/dlt/flights_dlt.yml
@@ -1,10 +1,10 @@
 resources:
   pipelines:
     flights_simple_dlt:
-      name: flights_simple_dlt
+      name: flights_simple_dlt_${bundle.target}
       configuration:
         var.source_path: /databricks-datasets/airlines
-        artifact_path: /Workspace${workspace.file_path}/src
+        artifact_path: ${workspace.file_path}/src
       libraries:
         - notebook:
             path: ../../src/flights_main_dlt.py
