--- a/resources/dlt/flights_dlt_validation.yml
+++ b/resources/dlt/flights_dlt_validation.yml
@@ -1,10 +1,10 @@
 resources:
   pipelines:
     flights_simple_dlt_validation:
-      name: flights_simple_dlt_validation
+      name: flights_simple_dlt_validation_${bundle.target}
       configuration:
         var.source_path: /databricks-datasets/airlines/part-00000
-        artifact_path: /Workspace${workspace.file_path}/src
+        artifact_path: ${workspace.file_path}/src
       libraries:
         - notebook:
             path: ../../src/flights_main_dlt.py
