--- a/databricks.yml
+++ b/databricks.yml
@@ -55,7 +55,6 @@ targets:
     # the same user (Service Principal) ever time.
     mode: production
     workspace:
-      host: https://e2-demo-west.cloud.databricks.com/
       root_path: /Users/${workspace.current_user.userName}/.bundle/${bundle.name}/${bundle.target}
     run_as:
       user_name: ${workspace.current_user.userName}
@@ -76,7 +75,7 @@ targets:
       database: flights_test
       flights_test_schema: flights_validation_test
       flights_dlt_schema: flights_test
-      node_type_id: Standard_DS3_v2
+      node_type_id: Standard_DS3_v2  #comment this line out to run on AWS
 
   staging:
     mode: production
